--- a/Web-UnitOfWork-EF.Repository/Web-UnitOfWork-EF.Repository.csproj
+++ b/Web-UnitOfWork-EF.Repository/Web-UnitOfWork-EF.Repository.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Mapping\RecipeMappingRepository.cs" />
     <Compile Include="Mapping\UserMappingRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="BaseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
