--- a/Web-UnitOfWork-EF.Repository/Web-UnitOfWork-EF.Repository.csproj
+++ b/Web-UnitOfWork-EF.Repository/Web-UnitOfWork-EF.Repository.csproj
@@ -34,23 +34,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseContextRepository.cs" />
+    <Compile Include="Interface\IMapping.cs" />
     <Compile Include="Interface\IUnitOfWorkRepository.cs" />
-    <Compile Include="Interface\IMappingRepository.cs" />
     <Compile Include="Mapping\RecipeMappingRepository.cs" />
     <Compile Include="Mapping\UserMappingRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
